Updated contact email

--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,9 @@
             <div class="contact-info">
                 <br />
                 <h2><strong>Phone Number:</strong> <a href="tel:+14045851629">(404) 585-1629</a></h2>
-                <h2><strong>Email Address:</strong> <a href="mailto:dbuzzell@andrew.cmu.edu">dbuzzell@andrew.cmu.edu</a></h2>
+                <h2><strong>Email Address:</strong> <a href="mailto:mail@davidbuzzell.com">mail@davidbuzzell.com</a></h2>
                 <br />
 		<!-- Add GitHub, LinkedIn, Facebook, SoundCloud, YouTube, etc. --->
-                <h3><em>For deliveries:</em>&nbsp;&nbsp;contact privately</h3>
         </section>
     </body>
 </html>
