Updated contact page
-created and linked favicon.ico
-created fontawesome icons for social links under Contact

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="./main.css">
-        <link rel="shortcut icon" href="icon.ico"
+        <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
     <body>
@@ -129,7 +129,7 @@
                                     <br />
                                     <br />
                                     <br />
-                                    Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB circuitry, 
+                                    Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB circuitry,
                                     and contact microphone
                                 </p></div>
                             </div>
