--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./main.css">
-        <link rel="shortcut icon" href="icon.ico"
+        <link rel="shortcut icon" href="./favicon.ico">
     </head>
     <body>
         <section class="container">
@@ -34,7 +35,21 @@
                 <h2><strong>Phone Number:</strong> <a href="tel:+14045851629">(404) 585-1629</a></h2>
                 <h2><strong>Email Address:</strong> <a href="mailto:mail@davidbuzzell.com">mail@davidbuzzell.com</a></h2>
                 <br />
-		<!-- Add GitHub, LinkedIn, Facebook, SoundCloud, YouTube, etc. --->
+                <span>
+                    <a href="https://github.com/xhamyd" class="fa fa-github"></a>
+                    <a href="https://www.linkedin.com/in/dabuzzell/" class="fa fa-linkedin"></a>
+                    <a href="https://www.facebook.com/dabuzzell" class="fa fa-facebook"></a>
+                    <a href="https://soundcloud.com/david-buzzell" class="fa fa-soundcloud"></a>
+                    <a href="https://www.youtube.com/user/thebuzzle" class="fa fa-youtube"></a>
+                    <!--
+                    <a href="#" class="fa fa-snapchat-ghost"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-skype"></a>
+                    <a href="#" class="fa fa-reddit"></a>
+                    --->
+                </span>
+                <!-- Add Facebook, SoundCloud, YouTube, etc. --->
+            </div>
         </section>
     </body>
 </html>
