--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="./main.css">
-        <link rel="shortcut icon" href="icon.ico">
-        <script type="text/javascript">
-          //<![CDATA[var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/"); document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));//]]
-        </script>
+        <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
     <body>
@@ -54,9 +51,10 @@
                 <img src="./images/homeimg.jpg" class="img-responsive" alt="Home Image">
             </div>
         </section>
+        <!--
         <script language="JavaScript" type="text/javascript">
             TrustLogo("http://davidbuzzell.com/images/comodo_secure_seal_76x26_transp.png", "CL1", "none");
         </script>
-        <a  href="https://ssl.comodo.com" id="comodoTL">Comodo SSL</a>
+        <a href="https://ssl.comodo.com" id="comodoTL">Comodo SSL</a> -->
     </body>
 </html>
