--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -12,7 +12,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
-        <link rel="shortcut icon" href="icon.ico"
+        <link rel="shortcut icon" href="../favicon.ico">
     </head>
 
     <body>
