Updated front page (for 5SOG)

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <section class="container">
             <div class="jumbotron">
                 <h1>David A. Buzzell</h1>
-                <h3>Bachelor of Science: Electrical and Computer Engineering</h3>
-                <h3>Bachelor of Science: Music and Technology</h3>
+                <h3>Software Engineer at iRobot</h3>
+                <h3>Bachelor of Science: Electrical & Computer Engineering, Music & Technology</h3>
             </div>
             <div class="well">
                 <p id="welltext">
-                    After 4 years and 2 degrees, ready to develop new technological solutions to be applied in the audio/creative fields
+                    Exploring opportunities to develop software solutions to support the music technology industry
                 </p>
             </div>
 
@@ -47,14 +47,45 @@
                 </div>
             </div>
 
-            <div class="homeimg">
-                <img src="./images/homeimg.jpg" class="img-responsive" alt="Home Image">
+            <div class="row homeimg">
+                <figure class="col-md-6">
+                    <div class="overlay-box">
+                        <a href="./resume.html">
+                            <img src="./images/homeimg.jpg" class="img-thumbnail" alt="Resume Website">
+                            <div class="overlay">
+                                <div class="homeimg-text">
+                                    <p>
+                                        <br />
+                                        <br />
+                                        Online Resume Website:<br />
+                                        David A. Buzzell
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </figure>
+                <figure class="col-md-6">
+                    <div class="overlay-box">
+                        <a href="https://music.davidbuzzell.com/love-is-dead">
+                            <img src="./images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Love is Dead">
+                            <div class="overlay">
+                                <div class="text homeimg-text">
+                                    <p>
+                                        <br />
+                                        <br />
+                                        Love is Dead:<br />
+                                        Five Stages of Grief Production Blog
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </figure>
+                <figure class="col-md-6">
+
+                </figure>
             </div>
         </section>
-        <!--
-        <script language="JavaScript" type="text/javascript">
-            TrustLogo("http://davidbuzzell.com/images/comodo_secure_seal_76x26_transp.png", "CL1", "none");
-        </script>
-        <a href="https://ssl.comodo.com" id="comodoTL">Comodo SSL</a> -->
     </body>
 </html>
