--- a/projects.html
+++ b/projects.html
@@ -51,14 +51,16 @@
                         <a href="./projects/music-tech-capstone.html">
                             <img src="./images/project1.jpg" class="img-thumbnail" alt="Project 1">
                             <div class="overlay">
-                                <div class="text"><p>
+                                <div class="text">
+                                    <p>
                                         <br />
                                         <br />
                                         <br />
                                         <br />
                                         A depth-controlled system that affects position and gain of audio sources, using<br />
                                         High Order Ambisonics, in a speaker ring
-                                </p></div>
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
