Clean out Music Blog page (also Bootstrap 4 lol)

--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 
 <!-- Welcome to my Online Resume Website!
-    All of the HTML, CSS, and Bootstrap code I learned independently from online tutorials.
-    This page is currently hosted by GitHub Pages, and the domain was purchased from Namecheap.
-    This site was last updated on Thursday, October 19th @ 12:27 AM (EST) -->
+     All of the HTML, CSS, and Bootstrap code I learned independently from online tutorials.
+     This page is currently hosted by GitHub Pages, and the domain was purchased from Namecheap.
+     This site was last updated on Sunday, May 12th @ 7:51 PM (EST) -->
 
 <html>
     <head>
         <title>David A. Buzzell</title>
+        <!-- Meta Content -->
         <meta charset="utf-8">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="shortcut icon" href="./favicon.ico">
+
+        <!-- Scripts: CDN -->
+        <!-- TODO: Evaluate using JQuery Direct versus AJAX for JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> -->
+
+        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+
+        <!-- Stylesheets -->
+        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="./main.css">
-        <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
     <body>
