Cleaned up old links

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
                     <h3 class="centered-head">Non-Contact EEG System</h3>
                     <div class="overlay-box">
                         <a href="./projects/non-contact-eeg.html">
-                            <img src="./images/project2.png" class="img-thumbnail" alt="Project 2">
+                            <img src="./images/project2.jpg" class="img-thumbnail" alt="Project 2">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br />
@@ -106,7 +106,7 @@
                     <h3 class="centered-head">ECE Capstone</h3>
                     <div class="overlay-box">
                         <a href="./projects/ece-capstone.html">
-                            <img src="./images/project4.png" class="img-thumbnail" alt="Project 4">
+                            <img src="./images/project4.jpg" class="img-thumbnail" alt="Project 4">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br />
@@ -160,7 +160,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2017 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
