--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -44,9 +44,9 @@
                     for Segmentation, and Fast Triangulation Meshing.<br />
                     <br />
                     Below is our presentation materials, including the
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDUE40VmR2WG45a2M">Final Report</a></strong>,
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDUE40VmR2WG45a2M">Final Presentation</a></strong>, and
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDNnA2eTBTaXpLdFU">Final Poster</a></strong>.
+                    <strong><a href="../documents/resume-website/final-report.pdf">Final Report</a></strong>,
+                    <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final Presentation</a></strong>, and
+                    <strong><a href="../documents/resume-website/final-poster.pdf">Final Poster</a></strong>.
                 </p>
             </div>
 
@@ -54,7 +54,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Report</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDUE40VmR2WG45a2M" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-report.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -62,7 +62,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDUE40VmR2WG45a2M" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-project-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -70,7 +70,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Poster</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDNnA2eTBTaXpLdFU" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-poster.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -80,7 +80,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2017 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
