--- a/projects/music-tech-capstone.html
+++ b/projects/music-tech-capstone.html
@@ -43,7 +43,7 @@
                     speaker ring.<br />
                     <br />
                     Below is a link to the materials used in the presentation of this project, including a
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDNEJpekZqNkpscW8">Project Writeup (PDF)</a></strong> and
+                    <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
                     <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
                     for viewers that were unable to attend the live demonstration of this system.
                 </p>
@@ -53,7 +53,7 @@
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Project Writeup</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDNEJpekZqNkpscW8" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/music-technology-project-writeup.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -69,7 +69,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2017 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
