--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -51,8 +51,8 @@
                     allowing researchers to test for brainwave patterns and health issues.<br />
                     <br />
                     Below are links to some of the diagrams and findings for this project. This includes the
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDamY1MGZjcS1ZNTQ">Design Presentation</a></strong> used for our large team meetings, the
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDejkzOVlvd25hQWs">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
+                    <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
+                    <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
                     <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong> to demonstrate the assembly of the electrode circuitry.
                     Beneath that is an image slideshow of some of the graphics created to illustrate our electrode design.
                 </p>
@@ -62,7 +62,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Design Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDamY1MGZjcS1ZNTQ" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/design-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -70,7 +70,7 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Parts Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDejkzOVlvd25hQWs" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -168,7 +168,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2017 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
