--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -46,7 +46,7 @@
                     <br />
                     With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
                     professor), and transformed it to a large, 34-part orchestral work. Below are links to the
-                    <strong><a href="https://drive.google.com/open?id=0BxYQ2iKIdQxDWURidEhTN3hiREE">Sheet Music</a></strong> and a
+                    <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
                     <strong><a href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>
                     which contains the synthesized audio recording along with the sheet music, scrolling in time with the recording.
                 </p>
@@ -56,7 +56,7 @@
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Sheet Music</h3>
-                        <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=0BxYQ2iKIdQxDWURidEhTN3hiREE" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-project-orchestration.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -72,7 +72,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2017 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
     </body>
