Trying to clean up index.html?

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <a href="https://music.davidbuzzell.com/love-is-dead">
                             <img src="./images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Love is Dead">
                             <div class="overlay">
-                                <div class="text homeimg-text">
+                                <div class="homeimg-text">
                                     <p>
                                         <br />
                                         <br />
@@ -96,9 +96,6 @@
                             </div>
                         </a>
                     </div>
-                </figure>
-                <figure class="col-md-6">
-
                 </figure>
             </div>
         </section>
