Think I fixed it!

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                                         <br />
                                         <br />
                                         Love is Dead:<br />
-                                        Five Stages of Grief Production Blog
+                                        Five Stages of Grief<br />
+                                        Production Blog
                                     </p>
                                 </div>
                             </div>
