bootlint fixes (index.html)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="shortcut icon" href="./favicon.ico">
+
+        <!-- Stylesheets -->
+        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
+        <link rel="stylesheet" type="text/css" href="./main.css">
 
         <!-- Scripts: CDN -->
         <!-- TODO: Evaluate using JQuery Direct versus AJAX for JQuery -->
@@ -22,23 +32,18 @@
         <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> -->
 
         <!-- TODO: Need to update to Bootstrap 4.0.0 -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
 
-        <!-- Stylesheets -->
-        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="./main.css">
     </head>
 
     <body>
         <nav class="navbar">
-            <!-- Just to create some header row space -->
+            <section class="container">
+                <!-- Just to create some header row space -->
+            </section>
         </nav>
 
         <section class="container">
@@ -54,11 +59,13 @@
             </div>
 
             <div class="row projectrow">
-                <div class="btn-group btn-group-justified">
-                    <a href="./index.html" class="btn btn-primary active">Home</a>
-                    <a href="./resume.html" class="btn btn-primary">Resume</a>
-                    <a href="./projects.html" class="btn btn-primary">Projects</a>
-                    <a href="./contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="./index.html" class="btn btn-primary active">Home</a>
+                        <a href="./resume.html" class="btn btn-primary">Resume</a>
+                        <a href="./projects.html" class="btn btn-primary">Projects</a>
+                        <a href="./contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
